[workspace]
members = [
  "core",
  "web/client",
  "web/server",
]

exclude = [
  "contract",
  "methods",
]

# [patch.crates-io]
# risc0-build = { path = "../risc0/risc0/build" }
# risc0-zkvm-circuit-gen = { path = "../risc0/risc0/zkvm/circuit/make-circuit" }
# risc0-zkvm-core = { path = "../risc0/risc0/zkvm/sdk/rust/core" }
# risc0-zkvm-host = { path = "../risc0/risc0/zkvm/sdk/rust/host" }
# risc0-zkvm-serde = { path = "../risc0/risc0/zkvm/sdk/rust/serde" }
