[package]
name = "battleship-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrayref = "0.3"
base64 = "0.13"
bincode = "1.3"
battleship-core = { path = "../core" }
battleship-methods = { path = "../methods" }
near-sdk = "3.1"
risc0-zkvm-core = "0.7.0-dev.1"
risc0-zkvm-serde = "0.7.0-dev.1"
risc0-zkvm-verify = "0.7.0-dev.1"
serde = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

# [patch.crates-io]
# risc0-build = { path = "../../risc0/risc0/build" }
# risc0-zkvm-core = { path = "../../risc0/risc0/zkvm/sdk/rust/core" }
# risc0-zkvm-serde = { path = "../../risc0/risc0/zkvm/sdk/rust/serde" }
# risc0-zkvm-verify = { path = "../../risc0/risc0/zkvm/sdk/rust/verify" }
