[package]
name = "battleship-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.14"
risc0-zkvm = { version = "0.19", default-features = false }
serde = { version = "1.0", default-features = false }

[dev-dependencies]
anyhow = "1.0"
battleship-methods = { path = "../methods" }
env_logger = "0.10"
log = "0.4"
risc0-zkvm = "0.19"
test-log = "0.2"
