[package]
name = "battleship-methods-inner"
version = "0.1.0"
edition = "2021"

[target.riscv32im-unknown-none-elf.dependencies]
battleship-core = { path = "../../core" }
risc0-zkvm-guest = "0.7.0-dev.1"

[profile.release]
lto = true
opt-level = "z"

[build-dependencies]
risc0-build = "0.7.0-dev.1"

# [patch.crates-io]
# risc0-build = { path = "../../../risc0/risc0/build" }
# risc0-zkvm-core = { path = "../../../risc0/risc0/zkvm/sdk/rust/core" }
# risc0-zkvm-guest = { path = "../../../risc0/risc0/zkvm/sdk/rust/guest" }
