[package]
name = "battleship-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["tracing"] }
battleship-core = { path = "../../core" }
battleship-methods = { path = "../../methods" }
base64 = "0.21"
bincode = "1.3"
risc0-zkvm = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
